Fix mobile image stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,8 +280,8 @@ button:hover {
   }
 
   .image-container img {
-    max-width: 100%;
-    height: 300px;
+    width: 100%;
+    height: auto;
   }
 
   header h1 {
